fix: :bug: fix websocket not working; refactor storage system.
(while stress) trying not touching the code as possible

[BREAKING CHANGE] Added new broadcast event
